# saminanoftir

./: .gitignore  LICENSE  README.md  pyproject.toml
saminanoftir/: __init__.py  cli.py
